samples/_failures_safe/1761455266_ed23a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0afbc001.c: In function ‘main’:
./samples/SAFE/__tmp_0afbc001.c:134:30: error: missing terminating " character
  134 |             cols2 = read_int("Enter
      |                              ^~~~~~
./samples/SAFE/__tmp_0afbc001.c:134:13: error: expected expression at end of input
  134 |             cols2 = read_int("Enter
      |             ^~~~~
./samples/SAFE/__tmp_0afbc001.c:134:21: error: too few arguments to function ‘read_int’
  134 |             cols2 = read_int("Enter
      |                     ^~~~~~~~
./samples/SAFE/__tmp_0afbc001.c:10:5: note: declared here
   10 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_0afbc001.c:134:13: error: expected declaration or statement at end of input
  134 |             cols2 = read_int("Enter
      |             ^~~~~
./samples/SAFE/__tmp_0afbc001.c:134:13: error: expected declaration or statement at end of input
